Fix font size to avoid line wrapping on smaller devices

--- a/style/site.scss
+++ b/style/site.scss
@@ -24,7 +24,7 @@ aside .header, nav .header {
   margin-top: 10px;
   margin-bottom: 10px;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 10px;
   text-transform: uppercase;
   background-color: white;
   padding-right: 8px
